--- a/public_html/forms/historiaCentro.html
+++ b/public_html/forms/historiaCentro.html
@@ -34,10 +34,10 @@ and open the template in the editor.
     </head>
     <body data-spy="scroll" data-target=".navbar" data-offset="50">
         <!-- Contenido -->
-        <section style="text-align: center">
-            <h2>Historia</h2>
+        <section id="sectHistoria">
+            <h2>Historia</h2> <br>
             
-            <cite>Jose Francisco</cite>
+            <cite >Jose Francisco</cite>
             <br>
             <p> La historia es la ciencia que tiene como objeto el estudio de sucesos del pasado, tradicionalmente de la humanidad1​, y como método el propio de las Ciencias Sociales/Humanas, así como el de las Ciencias Naturales en un marco de interdisciplinariedad.2​ Siendo la disciplina que estudia y narra cronológicamente los acontecimientos pasados. Se denomina también «historia» al periodo que transcurre desde la aparición de la escritura hasta la actualidad, aunque es un convencionalismo ampliamente superado en la actualidad, considerando a la prehistoria también como parte intrínseca de la historia.
 
