--- a/public_html/forms/Docentes.html
+++ b/public_html/forms/Docentes.html
@@ -34,7 +34,7 @@ and open the template in the editor.
     </head>
     <body>
         <!-- Contenido -->
-        <section>
+        <section id="sectDocente">
             <h2>Ficha Docente</h2>
             <br>
             <br>
