--- a/public_html/index.html
+++ b/public_html/index.html
@@ -74,7 +74,7 @@
                                     <li><a href="forms/PerfilInstitucional.html" target="despliega">Perfil Institucional</a></li>
                                     <li><a href="forms/Docentes.html" target="despliega">Docentes</a></li>
                                     <li class="divider"></li>
-                                    <li><a href="#">Reclutamiento</a></li>
+                                    <li><a href="forms/reclutamientoPersonal.html" target="despliega">Reclutamiento</a></li>
                                 </ul>
                             </li>
                         </ul>  
@@ -82,7 +82,7 @@
                              <li class="dropdown"> 
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" >Alumnos <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="forms/Docentes.html" target="despliega">Admisi&oacute;n</a></li>
+                                    <li><a href="forms/admision.html" target="despliega">Admisi&oacute;n</a></li>
                                 </ul>
                             </li>
                         </ul>
