--- a/public_html/forms/Docentes.html
+++ b/public_html/forms/Docentes.html
@@ -4,7 +4,7 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
-<html>
+<html lang="es">
     <head>
         <title>TODO supply a title</title>
        
@@ -43,14 +43,14 @@ and open the template in the editor.
                     <thead>
                         <tr class="active">
                             <th>&nbsp;&nbsp;</th>
-                            <th>Formaci&oacute;n</th>
+                            <th>Docente</th>
                             <th>Contacto</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
                             <td><img class="imagenDocentes" src="../img/Mairelis - Copy.jpg" alt="Mairelis - Copy"/></td>
-                            <td><p>Licenciada en Inform&aacute;tica. Tec. en Docencia tecnol&oacute;gica. Tutora del Laboratorio de Inform&aacute;tica, aula A-01.</p></td>
+                            <td><p>Mairelis A. Arroyo Burgos <br> Licenciada en Inform&aacute;tica. Tec. en Docencia tecnol&oacute;gica. Tutora del Laboratorio de Inform&aacute;tica, aula A-01.</p></td>
                             <td>
                                 <ul>
                                     <li class="icon icon-phone">&nbsp;&nbsp;+1 829 974 5847</li>
@@ -62,7 +62,7 @@ and open the template in the editor.
                         </tr>
                          <tr>
                             <td><img class="imagenDocentes" src="../img/Mairelis - Copy.jpg" alt="Mairelis - Copy"/></td>
-                            <td><p>Licenciada en Inform&aacute;tica. Tec. en Docencia tecnol&oacute;gica. Tutora del Laboratorio de Inform&aacute;tica, aula A-01.</p></td>
+                            <td><p>Mairelis A. Arroyo Burgos <br> Licenciada en Inform&aacute;tica. Tec. en Docencia tecnol&oacute;gica. Tutora del Laboratorio de Inform&aacute;tica, aula A-01.</p></td>
                             <td>
                                 <ul>
                                     <li class="icon icon-phone">&nbsp;&nbsp;+1 829 974 5847</li>
@@ -73,7 +73,7 @@ and open the template in the editor.
                             </td>
                         </tr> <tr>
                             <td><img class="imagenDocentes" src="../img/Mairelis - Copy.jpg" alt="Mairelis - Copy"/></td>
-                            <td><p>Licenciada en Inform&aacute;tica. Tec. en Docencia tecnol&oacute;gica. Tutora del Laboratorio de Inform&aacute;tica, aula A-01.</p></td>
+                            <td><p>Mairelis A. Arroyo Burgos <br> Licenciada en Inform&aacute;tica. Tec. en Docencia tecnol&oacute;gica. Tutora del Laboratorio de Inform&aacute;tica, aula A-01.</p></td>
                             <td>
                                 <ul>
                                     <li class="icon icon-phone">&nbsp;&nbsp;+1 829 974 5847</li>
